--- a/anywatch/package.json
+++ b/anywatch/package.json
@@ -1,42 +1,42 @@
 {
 	"name": "anywatch",
 	"version": "1.0.0",
-	"type": "module",
-	"description": "Backend Anywatch",
-	"main": "dist/index.js",
+	"description": "",
+	"main": "index.js",
 	"scripts": {
 		"dev": "ts-node-dev --respawn --transpile-only src/index.ts",
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"heroku-postbuild": "npm run build"
+		"test": "jest"
 	},
-	"engines": {
-		"node": "18.x"
-	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-rate-limit": "^7.5.0",
 		"jsonwebtoken": "^9.0.2",
-		"pg": "^8.14.1",
-		"pg-connection-string": "^2.7.0",
+		"pg": "^8.13.3",
 		"swagger-autogen": "^2.23.7",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.1"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
-		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.9",
-		"@types/node": "^18.0.0",
+		"@types/node": "^18.19.80",
 		"@types/pg": "^8.11.11",
+		"@types/supertest": "^6.0.2",
 		"@types/swagger-ui-express": "^4.1.8",
 		"jest": "^29.7.0",
-		"ts-node": "^10.9.2",
+		"supertest": "^7.1.0",
+		"ts-jest": "^29.2.6",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.8.2"
-	}
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
